Next step in GUI working. Customers tab designed. Need to implement editing mode and search boxes. getData() methods for DB_Address and DB_Customer that returns all their corresponding data in String[] format. Changed DAO getCustomers to use ArrayLists over LinkedLists, adjusted the tests too.